# VisionZeroSolutions

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.rc
core/LVisLib/include/byteTrack/include/: STrack.h
core/LVisLib/include/core/include/: ViClip.h  VinEncrypt.h  arcFace.h  coreBase.h  coreInterface.h  coreUtils.h  interface.h  landmarksFace.h  objectTracker.h  ppeCore.h  return.h  utils.h  vfd.h  yoloOnnxInfer.h
core/LVisLib/include/modelLoader/include/: modelLoader.h
core/LVisLib/include/paddleOCR/include/: CTCDecoder.h  paddleDetection.h  paddleRecognition.h
src/: CurlHelper.cpp  CurlHelper.h  DB.cpp  DB.h  Define.h  RestAPI.cpp  RestAPI.h  RestAPI2.cpp  RestAPI2.h  Timer.h  actions_detector.cpp  actions_detector.h  detection.cpp  detection.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  exceptions.h  frame.h  geometry.h  plugin.cpp  plugin.h  plugin_settings.cpp  plugin_settings.h  test_core.cpp  utils.cpp  utils.h
